css/style.css
/* ... */
#routineCoreTable input[type="string"] {
    width: fit-content;
    max-width: fit-content;
    background: transparent !important;
    border: none;
}

#armourTable input[type="string"], #meleeTable input[type="string"]{
    max-width: 50px;
}

datalist {
    overflow: scroll;
}

table {
    background-image: url("../img/Table.jpeg");
    background-size: 1000px 670px;
    background-color: black;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 100%;
    min-width: fit-content;
    border: 2px solid #8B0000;
    margin: 0px !important;

}

#credits {
    width: 100px !important;
}
.bioTable{
    width: 100%;
    
}
.bioPanel{
    background-image: none;
    background-color: transparent;
    border: none;
}

.bioPanel th, .bioPanel td, .bioPanel tr {
    border: none;    
}

input[type="string"] {
    text-align: center;
    height: 100%;
    width: 100% !important;
}

.ibtnDel{
    border: transparent;
    background-color: transparent;
    padding: 0;
    margin:auto;
  display:block;
}

.ibtnDel:hover{
    background-color: #8B000088;
}


#charPic {

    display: flex;
    width: 300px !important;
    margin-left: auto;
    margin-right: auto;
}

.button {
    background-color: black;
    color: white;
    border: 2px solid #609;
    height: 20px;
    line-height: 0;
    padding: 5px 5px  5px 5px;
    text-align: center !important;
    font-size: 0.8em;
    width: 20px;
    cursor: pointer;

}

#mele

.dropdown {
    width: 24px;
    padding: 0;
}

.fa-info-circle{
    color: white !important;

}
.fa-info-circle:hover{
    color: red !important;
}
input[type="text"]{
    min-width: 250px;
    width: fit-content;
    height: 100%;
}
input[type="number"] {
    width: 35px;
    max-width: fit-content;
    height: 20px;
    text-align: center;
}

th {
    background: #330066;
    text-align: center;
    color: white;
    max-width: 20%;
}
td,
input,
h2,h4,h6,b,
select {
    border: 0;
    width: fit-content;
    color: #e0cd67 !important;
    font-family: Calibri !important;
    font-weight: bold !important;
    overflow:auto;
}

h2{
    width: fit-content;
}
.fa-question-circle {
    font-size:24px;
    color: white;
    outline: none !important;
    border: 0px;


}
.fa-question-circle:active,.fa-question-circle:focus{
    outline: none !important;
    border: 0px;
}


h2 { 
    margin-left: auto;
    margin-right: auto;
}

.leftAlign {
margin: 0 !important;
}

input[id*='item'], input[id*='weapon'], input[id*='robot'], input[id*='drone'], input[id*='armour'] {
    width: 40px !important;
}



th,
textarea {
   
    width: fit-content;
    font-family: Calibri !important;
    font-weight: bold !important;
    border: 0 none white;
    overflow: hidden;
    padding: 0;
    outline: none;
   
}



div {

    column-gap: 0px;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
    
   
}

div .row{
    margin-left: 0px;
}

textarea[type="string"]{
    margin-left: auto;
    margin-right: auto;

}

div .col-xs-4, div .col-xs-6, .col-xs-12{
     height: fit-content;
    min-width: fit-content;
    width: 30vw;
    padding: 0px;
    text-align: center;
    box-sizing: border-box;
}
.order-list{
    font-size: 0.8em;
}
.order-list input{
    width: 30px;
}

#saveTable input[type="number"],
#playerLevel,
#atkBonus,
#playerXP {
    max-width: 35px !important;
    height: 35px;
    box-sizing: border-box;
    border: none;
    outline: 0;
    background: linear-gradient(purple, purple) top / calc(100% - 20px) 2px,
        linear-gradient(purple, purple) bottom/calc(100% - 20px) 2px,
        linear-gradient(purple, purple) left / 2px calc(100% - 20px),
        linear-gradient(purple, purple) right / 2px calc(100% - 20px),
        linear-gradient(
                to bottom right,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            top left/10px 10px,
        linear-gradient(
                to bottom right,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            bottom right/10px 10px,
        linear-gradient(
                to bottom left,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            top right/10px 10px,
        linear-gradient(
                to bottom left,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            bottom left/10px 10px;

    background-repeat: no-repeat;
}

input {
    background-color: black;
    border: 2px solid #609;
}

select, input[type="text"] {
    border-radius: 15px 50px;
    border: 2px solid #609;
    text-align: center;
    
    text-align-last: center;
    height: fit-content;
    font-weight: normal !important;
        background-color:black;
}
input:focus,
select:focus,
input[type="text"]:focus,
textarea:focus,
button:focus {
    outline: none;
}



body {
    background-image: url("../img/Page_Background.jpeg");
      font-family: 'Noto Sans', 'Helvetica';
background-size: 2880px 1602px;
}

/*https://image.freepik.com/free-vector/circuit-board-vector-seamless-texture-sci-fi-electronic-background_53562-4044.jpg*/

optgroup {
    color: #00FFFF;
    font-weight: lighter !important;
    background-color: #8b0000;
}

.helpPanel a{
    
    font-size: 16px;
}

.helpPanel{
    display: inline-block;
    text-align: left !important;
    margin-left: 20px;
    margin-right: 20px;
    transition: margin-left 0.5s;
}
#expertAbility, #warriorAbility{
    width: fit-content;
    padding: 10px;
    border-radius: 5px;
    border: 5px solid #8B0000;
    background-color: black;
    top: 50%;
    left: 50%;
    position: absolute;
    transform: translate(-50% , -50%);
}

.helpPanel h2,.helpPanel h4, .helpPanel h6{
    margin: 0px;
    text-decoration: underline;
}
/* ... */

